<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="175dp"
    android:layout_height="175dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="30dp"
    android:layout_marginLeft="30dp"
    android:layout_marginBottom="20dp"
    android:contentDescription="@string/card"
    android:minHeight="150dp"
    app:cardBackgroundColor="#FF402D"
    app:cardCornerRadius="16dp">

    <!--    app:cardElevation="10dp"-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/card_image"
            android:cropToPadding="true"
            android:maxWidth="100dp"
            android:src="@drawable/android_developer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/card_theme"
            android:text="@string/card_theme"
            android:textColor="@color/Not_so_white_white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.cardview.widget.CardView>