<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="223dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/test_picture"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/notifications" />

    <LinearLayout
        android:id="@+id/layout_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5">


        <Switch
            android:id="@+id/switch_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifications_switch"
            android:textAlignment="viewStart"
            android:textColor="@color/Not_so_white_white"
            android:theme="@style/SCBSwitch"
            android:layout_marginBottom="32dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <LinearLayout
            android:id="@+id/time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_notifications">

            <TextView
                android:id="@+id/title_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_weight="3"
                android:contentDescription="@string/title_notifications_picker"
                android:text="@string/title_notifications_picker">

            </TextView>

            <NumberPicker
                android:id="@+id/hour_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:theme="@style/PrimaryTheme">

            </NumberPicker>

            <NumberPicker
                android:id="@+id/minutes_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:theme="@style/PrimaryTheme">

            </NumberPicker>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Potvrdit"
            android:textColor="@color/primary"
            android:background="@color/secondary"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:id="@+id/confirm_notifications"
            android:bottomRightRadius="16dp"
            android:bottomLeftRadius="16dp"
            android:topLeftRadius="16dp"
            android:topRightRadius="16dp"

            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>